--- a/static/css/main.css
+++ b/static/css/main.css
@@ -37,6 +37,10 @@ body{
     width: 100%;
 }
 
+h1{
+    display: flex;
+}
+
 h2{
     display: flex;
     align-items: center;
@@ -171,4 +175,9 @@ section.board{
 
 .card-title{
     padding-right: 16px;
+}
+
+.flex {
+   display: flex;
+   flex-direction: row;
 }
